--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/identity": "^4.12.0",
     "@hookform/resolvers": "^3.10.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -43,12 +45,20 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "morgan": "^1.10.1",
+    "mssql": "^11.0.1",
     "next-themes": "^0.3.0",
+    "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
