--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@azure/identity": "^4.12.0",
+    "@google/model-viewer": "^3.5.0",
     "@hookform/resolvers": "^3.10.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -47,7 +48,7 @@
     "cmdk": "^1.1.1",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
